fix blackjack